examples/pos/infer/infer_handler.effekt
effect Exc { def foo(): Unit }
effect Get {
  def get(): Int
}

def id[A](a: A): A = a

def main() = {
  try {
    val x = try {
      id(get())
    } with Get { def get() = resume(get()) }
    println(x + 1)
  } with Get { def get() = resume(42) }

}