examples/neg/issue373/wrong_type_argument_arity.effekt
interface Eff[A] {
  def op(x: A): A
}

def main() =
  try { println(eff.op[Bool, Int]("hello")) } // ERROR Wrong number of type arguments, given 2 but expected 1
  with eff: Eff[Int] { def op(x) = resume(x / 1) }
